--- a/src/styles/components/Topnav.css
+++ b/src/styles/components/Topnav.css
@@ -9,7 +9,10 @@
   color: #ffffff;
   background: none;
   position: relative;
-  z-index: 1;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
 }
 
 .logo {
@@ -31,6 +34,7 @@
   color: #ffffff;
   text-decoration: none;
   font-weight: bold;
+  transition: background-color 0.3s ease, border-color 0.3s ease;
 }
 
 .nav-links a:hover {
@@ -44,11 +48,11 @@
 
 .sign-in,
 .get-started {
-  /* border: 1px solid; */
   padding: 0.5rem 1rem;
   border-radius: 8px;
   font-weight: bold;
   text-decoration: none;
+  transition: background-color 0.3s ease, border-color 0.3s ease;
 }
 
 .sign-in {
@@ -76,6 +80,8 @@
   cursor: pointer;
   border-radius: 8px;
   padding: 0.3rem 0.8rem;
+  z-index: 1001;
+  transition: background-color 0.3s ease, border-color 0.3s ease;
 }
 
 .menu-button:hover {
@@ -87,6 +93,13 @@
 .menu-button.close {
   color: #fa4949;
   border-color: #fa4949;
+  transition: background-color 0.3s ease, border-color 0.3s ease;
+}
+
+.menu-button.close:hover {
+  background-color: #fa4949;
+  color: #ffffff;
+  border-color: #fa4949;
 }
 
 .menu-container {
@@ -97,11 +110,11 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 60%;
+  height: 100%;
   padding: 1rem;
   box-sizing: border-box;
-  border-bottom: 1px solid #ddd;
-  z-index: 1000;
+  z-index: 999;
+  overflow-y: auto;
 }
 
 .menu-header {
@@ -153,6 +166,7 @@
   background: none;
   padding: 0.5rem 1rem;
   font-size: 0.8rem;
+  transition: background-color 0.3s ease, border-color 0.3s ease;
 }
 
 .menu-auth-links .sign-in:hover,
@@ -166,6 +180,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: transparent;
   }
 
   .nav-links,
@@ -177,8 +192,24 @@
     display: block;
   }
 
+  .topnav.open {
+    background-color: #ffffff; 
+  }
+
+  .topnav.open .menu-button {
+    border-color: #fa4949;
+  }
+
   .topnav.open .menu-container {
     display: flex;
+  }
+
+  .menu-container.open {
+    display: flex;
+  }
+
+  body {
+    overflow-x: hidden; 
   }
 
   .topnav.open .nav-links,
